--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 
     <!-- Custom CSS -->
     <link href="css/gb.css" rel="stylesheet">
+
+    <!-- Animate.CSS -->
+    <link href="css/animate.css" rel="stylesheet">
     
 </head>
 <body id="page-top">
@@ -72,9 +75,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div id="intro_text">
+                    <div id="intro_text" class="animated bounceInDown">
                         <div id="name">Greg Barnett</div>
                         <span id="skill_intro">Full-Stack Web Developer &amp; Guitarist</span>
+                    </div>
                 </div>
             </div>
         </div>
