--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
                        
                         <p>Graduating SUNY ONEONTA in 2009 with a major in Music Industry &amp; a minor in Guitar Performance, Greg is a well-seasoned professional in the music industry as well as an excellent guitarist.</p>
 
-                        <p>In 2012, Greg decided to return to school to pursue a degree in his other passion: Information Technology. Graduating in 2013, Greg emerged from school a well rounded technologist equipped with expertise in programming, networking, and database systems.</p> 
+                        <p>In 2012, Greg decided to return to school to pursue a degree in his other passion: Information Technology. Graduating in 2013, Greg emerged from school a well-rounded technologist equipped with expertise in programming, networking, and database systems.</p> 
                        
                         <p>Greg is currently working at the Harry Fox Agency (HFA) as a Full-Stack Web Developer where he gets to combine his two passions, music and technology, to build software that helps music publishers and song writers in the music industry.</p>
 
-                        <p>Greg currently resides in Long Beach NY.</p>
+                        <p>Greg currently resides in Long Beach, NY.</p>
                     </div>
                 </div>
             </div>
@@ -149,7 +149,7 @@
                     <div class="col-sm-3">
                         <h3>Frameworks &amp; API's</h3>
                         <div class="skill_col">
-                            Codeignitor MVC
+                            Codeigniter MVC
                             <br />
                             Angular.JS
                             <br />
@@ -168,7 +168,7 @@
                     <div class="col-sm-3">
                         <h3>Databases</h3>
                         <div class="skill_col">
-                            MYSQL
+                            MySQL
                             <br />
                             Microsoft SQL Server**
                             <br />
@@ -183,17 +183,17 @@
                     <div class="col-sm-3">
                         <h3>Other</h3>
                         <div class="skill_col">
-                            Linux(Ubuntu &amp; Redhat)
+                            Linux (Ubuntu &amp; Redhat)
                             <br />
-                            Apple Mac OSX
+                            Apple Mac OS X
                             <br />
-                            Apple Mac OSX Server
+                            Apple Mac OS X Server
                             <br />
-                            Microsoft Windows XP, 7, 8, Server 2003, 2008
+                            Microsoft Windows XP, 7, 8, 10, Server 2003, 2008
                             <br />
                             Version Control (Git)
                             <br />
-                            Amazon Web Services(EC2, RDS, S3, EBS)
+                            Amazon Web Services (EC2, RDS, S3, EBS)
                             <br />
                             Active Directory
                             <br />
@@ -223,7 +223,7 @@
                     <div class="contact_content">
                         <div>
                             <p id="email_text">
-                                To contact Greg please click the button below to send an email. 
+                                To contact Greg, please click the button below to send an email. 
                                 <br />
                                 Please be sure to include your name, &amp;
                                 contact info.
