Changes to skills

--- a/index.html
+++ b/index.html
@@ -136,18 +136,20 @@
                             <br />
                             SQL
                             <br />
+                            XML
+                            <br />
                             HTML
                             <br />
                             CSS
                             <br />
-                            Java**
+                            Java(Including Basic Andriod Development)**
                             <br />
                             Visual Basic**
                         </div>
                     </div>
 
                     <div class="col-sm-3">
-                        <h3>Frameworks &amp; API's</h3>
+                        <h3>Frameworks, Library's &amp; API's</h3>
                         <div class="skill_col">
                             Codeigniter MVC
                             <br />
@@ -160,6 +162,10 @@
                             Amazon SDK
                             <br />
                             YouTube Content ID API
+                            <br />
+                            PayPal API
+                            <br />
+                            Google Maps API
                             <br />
                             FPDF
                         </div>
@@ -185,11 +191,15 @@
                         <div class="skill_col">
                             Linux (Ubuntu &amp; Redhat)
                             <br />
+                            Apache
+                            <br />
                             Apple Mac OS X
                             <br />
                             Apple Mac OS X Server
                             <br />
                             Microsoft Windows XP, 7, 8, 10, Server 2003, 2008
+                            <br />
+                            Vagrant
                             <br />
                             Version Control (Git)
                             <br />
