--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<?php
+require 'user_tracking.php';
+?>
+
 <!DOCTYPE html>
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
