--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
+<?php require 'user_tracking.php'; ?>
 <!DOCTYPE html>
-<?php
-require 'user_tracking.php';
-?>
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <head>
