changed mailto email

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                 Please be sure to include your name, &amp;
                                 contact info.
                             </p>
-                            <a href="mailto:Zombie374@aol.com" data-toggle="tooltip" title="Contact Me!" class="email_button btn btn-lg">Contact Me!</a>
+                            <a href="mailto:Greg@gbarnett.net" data-toggle="tooltip" title="Contact Me!" class="email_button btn btn-lg">Contact Me!</a>
                         </div>
                         <div class="social_container">
                             <p>Feel free to checkout my Github, Resume &amp; Linkedin below.</p>
