Added to the skills section

--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
                         <div class="skill_col">
                             PHP
                             <br />
+                            Ruby
+                            <br />
                             JavaScript/jQuery
                             <br />
                             SQL
@@ -153,6 +155,8 @@
                         <h3>Frameworks, Library's &amp; API's</h3>
                         <div class="skill_col">
                             Codeigniter MVC
+                            <br />
+                            Laravel
                             <br />
                             Angular.JS
                             <br />
@@ -204,7 +208,7 @@
                             <br />
                             Version Control (Git)
                             <br />
-                            Amazon Web Services (EC2, RDS, S3, EBS)
+                            Amazon Web Services (EC2, RDS, S3, EBS, Cloud Search)
                             <br />
                             Active Directory
                             <br />
