Fixed typo, added rails to skills

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <br />
                             CSS
                             <br />
-                            Java (Including Basic Andriod Development)**
+                            Java (Including Basic Android Development)**
                             <br />
                             Visual Basic**
                         </div>
@@ -154,9 +154,9 @@
                     <div class="col-sm-3">
                         <h3>Frameworks, Library's &amp; API's</h3>
                         <div class="skill_col">
-                            Codeigniter MVC
+                            Codeigniter
                             <br />
-                            Laravel
+                            Ruby on Rails
                             <br />
                             Angular.JS
                             <br />
