--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </div>
     </section>
 
-    <!-- Services Section -->
+    <!-- Skills Section -->
     <section id="skills" class="skills-section">
       <div class="container">
         <div class="row">
