--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<?php require 'user_tracking.php'; ?>
+<?php require './scripts/user_tracking.php'; ?>
 <!DOCTYPE html>
 <html>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
