--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <!-- *** Scripts *** -->
 
     <!-- jQuery -->
-    <script src="./assets/js/jquery.js"></script>
+    <script src="./assets/js/jquery-3.1.0.min.js"></script>
 
     <!-- Bootstrap JavaScript -->
     <script src="./assets/js/bootstrap.min.js"></script>
