Added minified animate.css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link href="./assets/css/gb.css" rel="stylesheet">
 
     <!-- Animate.CSS -->
-    <link href="./assets/css/animate.css" rel="stylesheet">
+    <link href="./assets/css/animate.min.css" rel="stylesheet">
     
   </head>
   <body id="page-top">
