--- a/index.html
+++ b/index.html
@@ -127,15 +127,15 @@
                 <br />
                 PHP
                 <br />
-                JavaScript/jQuery
+                JavaScript/CoffeeScript
                 <br />
                 SQL
                 <br />
                 XML
                 <br />
-                HTML
+                HTML/HAML
                 <br />
-                CSS
+                CSS/SCSS
                 <br />
                 Java (Including Basic Android Development)**
                 <br />
@@ -152,7 +152,11 @@
                 <br />
                 Angular.JS
                 <br />
+                jQuery
+                <br />
                 Bootstrap
+                <br />
+                RSpec
                 <br />
                 Ajax
                 <br />
@@ -175,6 +179,8 @@
                 <br />
                 Postgres
                 <br />
+                Active Record ORM
+                <br />
                 Microsoft SQL Server**
                 <br />
                 Design
@@ -194,15 +200,13 @@
                 <br />
                 Apple Mac OS X
                 <br />
-                Apple Mac OS X Server
-                <br />
-                Microsoft Windows XP, 7, 8, 10, Server 2003, 2008
+                Microsoft Windows
                 <br />
                 Vagrant
                 <br />
                 Version Control (Git)
                 <br />
-                Amazon Web Services (EC2, RDS, S3, EBS, Cloud Search)
+                Amazon Web Services (EC2, RDS, S3, EBS, CloudSearch)
                 <br />
                 Active Directory
                 <br />
@@ -267,7 +271,7 @@
 
     <footer>
       <div>
-        <strong>Greg Barnett &copy; 2015</strong>
+        <strong>Greg Barnett &copy; 2016</strong>
       </div>
     </footer>
 
