--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
 
     <!--[if lt IE 9]>
-        <script src="js/html5shiv-printshiv.min.js"></script>
+        <script src="./assets/js/html5shiv-printshiv.min.js"></script>
     <![endif]-->
 
     <title>Greg Barnett - Full Stack Web Developer</title>
@@ -19,7 +19,7 @@
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!--Fontawesome CSS -->
-    <link rel="stylesheet" href="./assets/css/font-awesome-4.4.0/css/font-awesome.min.css">
+    <link href="./assets/css/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="./assets/css/gb.css" rel="stylesheet">
