--- a/index.html
+++ b/index.html
@@ -274,19 +274,7 @@
       </div>
     </footer>
 
-    <!-- *** Scripts *** -->
-
-    <!-- jQuery -->
-    <script src="./assets/js/jquery-3.1.0.min.js"></script>
-
-    <!-- Bootstrap JavaScript -->
-    <script src="./assets/js/bootstrap.min.js"></script>
-
-    <!-- jQuery Easing -->
-    <script src="./assets/js/jquery.easing.min.js"></script>
-
-     <!-- JS for scrolling & nav -->
-    <script src="./assets/js/gb.js"></script>
-
+    <!-- *** JS *** -->
+    <script src="./gulp_tasks/build/app.js"></script>
   </body>
 </html>
