--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
     
     <!-- CSS -->
     <link href="./assets/builds/styles.css" rel="stylesheet">
-    
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,700" rel="stylesheet" type="text/css">
+
+    <!-- Font Awesome -->
+    <link href="./assets/css/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
 
   </head>
   <body id="page-top">
