Updated skills section,

--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
                 <br />
                 PHP
                 <br />
-                JavaScript/CoffeeScript
+                JavaScript (Node &amp; Client Side)
+                <br />
+                CoffeeScript
                 <br />
                 SQL
                 <br />
@@ -129,10 +131,6 @@
                 HTML/HAML
                 <br />
                 CSS/SCSS
-                <br />
-                Java (Including Basic Android Development)**
-                <br />
-                Visual Basic**
               </div>
             </div>
 
@@ -151,17 +149,11 @@
                 <br />
                 RSpec
                 <br />
-                Ajax
-                <br />
                 Amazon SDK
                 <br />
                 YouTube Content ID API
                 <br />
                 PayPal API
-                <br />
-                Google Maps API
-                <br />
-                FPDF
               </div>
             </div>
               
@@ -172,9 +164,9 @@
                 <br />
                 Postgres
                 <br />
-                Active Record ORM
+                Redis
                 <br />
-                Microsoft SQL Server**
+                Active Record ORM
                 <br />
                 Design
                 <br />
@@ -201,15 +193,10 @@
                 <br />
                 Amazon Web Services (EC2, RDS, S3, EBS, CloudSearch)
                 <br />
-                Active Directory
-                <br />
                 Network Management
               </div>
             </div>
-          </div>
-          <div class="academic_experience">
-            **Academic Experience
-          </div>       
+          </div>    
         </div>
       </div>
     </section>
