change to about me copy.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
               <p>In 2012, Greg decided to return to school to pursue a degree in his other passion: Information Technology. Graduating in 2013, Greg emerged from school a well-rounded technologist equipped with expertise in programming, networking, and database systems.</p> 
                
-              <p>Greg is currently a Full-Stack Ruby on Rails Web Developer at Makerbot Industries. Working at Makerbot allows Greg to build applications that not only give people the tools to work with 3D printing, but the tools to innovate &amp; change the world.</p>
+              <p>Greg is currently a Full-Stack Web Developer at Makerbot Industries. Working at Makerbot allows Greg to build applications that not only give people the tools to work with 3D printing, but the tools to innovate &amp; change the world.</p>
 
               <p>Greg resides in Long Beach, NY.</p>
             </div>
