Some minor changes.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
 
             <div class="col-sm-3">
-              <h3>Programming Languages</h3>
+              <h3>Languages</h3>
               <div class="skill_col">
                 Ruby
                 <br />
@@ -126,11 +126,11 @@
                 <br />
                 SQL
                 <br />
-                XML
-                <br />
                 HTML/HAML
                 <br />
                 CSS/SCSS
+                <br />
+                XML
               </div>
             </div>
 
@@ -141,19 +141,17 @@
                 <br />
                 Codeigniter
                 <br />
+                React
+                <br />
                 Angular.JS
                 <br />
                 jQuery
                 <br />
                 Bootstrap
                 <br />
-                RSpec
-                <br />
                 Amazon SDK
                 <br />
                 YouTube Content ID API
-                <br />
-                PayPal API
               </div>
             </div>
               
@@ -251,7 +249,7 @@
 
     <footer>
       <div>
-        <strong>Greg Barnett &copy; 2017</strong>
+        <strong>Greg Barnett &copy; 2018</strong>
       </div>
     </footer>
 
