Updated path to resume.

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 </span>
 
                 <span id="resume_button">
-                  <a href="./GB_RES_02_2017.pdf" target="_blank">
+                  <a href="./GB_Resume_01_2018.pdf.pdf" target="_blank">
                     <i data-toggle="tooltip" title = "Resume" class="fa fa-file-text-o fa-5x"></i>
                   </a>
                 </span>
