--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               <span class="glyphicon glyphicon-music" aria-hidden="true"></span>
             </div>
             <div>
-              <img class="img-responsive" id="profile_img" src="./assets/img/profile.jpg" alt="">
+              <img class="img-responsive" id="profile_img" src="./assets/img/new_profile_compressed.jpg" alt="">
             </div>
             <div id="about_text">
               <h3>Greg Barnett is a Full-Stack Web Developer, and guitarist with a passion for creating &amp; learning.</h3>
