--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <br />
                 React
                 <br />
-                Angular.JS
+                Angular 1.x
                 <br />
                 jQuery
                 <br />
