Updated about me section.

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
               <p>Graduating SUNY ONEONTA in 2009 with a major in Music Industry &amp; a minor in Guitar Performance, Greg is a well-seasoned professional in the music industry as well as an excellent guitarist.</p>
 
               <p>In 2012, Greg decided to return to school to pursue a degree in his other passion: Information Technology. Graduating in 2013, Greg emerged from school a well-rounded technologist equipped with expertise in programming, networking, and database systems.</p> 
-               
-              <p>Greg is currently a Full-Stack Web Developer at Makerbot Industries. Working at Makerbot allows Greg to build applications that not only give people the tools to work with 3D printing, but the tools to innovate &amp; change the world.</p>
 
-              <p>Greg resides in Long Beach, NY.</p>
+              <p>After graduating Greg spent several years working as a Software Enginner in the NY Tech scene at compaines such as The Harry Fox Agency/SESAC, and MakerBot Industries.</p>
+               
+              <p>In Fall 2018 Greg decided to move down to Florida and is currently a Software Engineer at Ship Sticks in West Palm Beach.
             </div>
           </div>
         </div>
