--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src="./assets/js/html5shiv-printshiv.min.js"></script>
     <![endif]-->
 
-    <title>Greg Barnett - Full Stack Web Developer</title>
+    <title>Greg Barnett - Full Stack Software Engineer</title>
     <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon">
     
@@ -63,7 +63,7 @@
           <div class="col-lg-12">
             <div id="intro_text" class="animated bounceInDown">
               <div id="name">Greg Barnett</div>
-              <span id="skill_intro">Full-Stack Web Developer &amp; Guitarist</span>
+              <span id="skill_intro">Full-Stack Software Engineer &amp; Guitarist</span>
             </div>
           </div>
         </div>
@@ -85,7 +85,7 @@
               <img class="img-responsive" id="profile_img" src="./assets/img/new_profile_compressed.jpg" alt="">
             </div>
             <div id="about_text">
-              <h3>Greg Barnett is a Full-Stack Web Developer, and guitarist with a passion for creating &amp; learning.</h3>
+              <h3>Greg Barnett is a Full-Stack Software Engineer, and guitarist with a passion for creating &amp; learning.</h3>
               <br />
                
               <p>Graduating SUNY ONEONTA in 2009 with a major in Music Industry &amp; a minor in Guitar Performance, Greg is a well-seasoned professional in the music industry as well as an excellent guitarist.</p>
