--- a/index.html
+++ b/index.html
@@ -150,8 +150,6 @@
                 Bootstrap
                 <br />
                 Amazon SDK
-                <br />
-                YouTube Content ID API
               </div>
             </div>
               
@@ -161,6 +159,8 @@
                 MySQL
                 <br />
                 Postgres
+                <br />
+                MongoDB
                 <br />
                 Redis
                 <br />
@@ -177,7 +177,7 @@
             <div class="col-sm-3">
               <h3>Other</h3>
               <div class="skill_col">
-                Linux (Ubuntu &amp; Redhat)
+                Linux
                 <br />
                 Apache
                 <br />
@@ -189,7 +189,7 @@
                 <br />
                 Version Control (Git)
                 <br />
-                Amazon Web Services (EC2, RDS, S3, EBS, CloudSearch)
+                Amazon Web Services (EC2, RDS, S3)
                 <br />
                 Network Management
               </div>
