--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
               <p>After graduating Greg spent several years working as a Software Enginner in the NY Tech scene at compaines such as The Harry Fox Agency/SESAC, and MakerBot Industries.</p>
                
-              <p>In Fall 2018 Greg decided to move down to Florida and is currently a Software Engineer at Ship Sticks in West Palm Beach.
+              <p>In Fall 2018 Greg decided to move down to Florida and currently works as a remote Software Engineer at A Cloud Guru/Linux Academy.
             </div>
           </div>
         </div>
@@ -249,7 +249,7 @@
 
     <footer>
       <div>
-        <strong>Greg Barnett &copy; 2019</strong>
+        <strong>Greg Barnett &copy; 2020</strong>
       </div>
     </footer>
 
