--- a/index.html
+++ b/index.html
@@ -232,13 +232,13 @@
                 </span>
 
                 <span id="resume_button">
-                  <a href="./GB_Resume_09_2019_2.pdf" target="_blank">
+                  <a href="./GB_Resume_08_2021_2.pdf" target="_blank">
                     <i data-toggle="tooltip" title = "Resume" class="fa fa-file-text-o fa-5x"></i>
                   </a>
                 </span>
 
                 <span id="linkedin_button">
-                  <a href="https://www.linkedin.com/pub/greg-barnett/82/ba7/828" target="_blank">
+                  <a href="https://www.linkedin.com/in/greg-b-828ba782/" target="_blank">
                     <i data-toggle="tooltip" title="Linkedin" class="fa fa-linkedin-square fa-5x"></i>
                   </a>
                 </span>
