--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
               <p>After graduating Greg spent several years working as a Software Enginner in the NY Tech scene at compaines such as The Harry Fox Agency/SESAC, and MakerBot Industries.</p>
                
-              <p>In Fall 2018 Greg decided to move down to Florida and currently works as a remote Senior Software Engineer at Pluralsight / A Cloud Guru.
+              <p>In Fall 2018 Greg decided to move down to Florida and currently works as a remote Tech Lead at Pluralsight / A Cloud Guru.
             </div>
           </div>
         </div>
@@ -251,7 +251,7 @@
 
     <footer>
       <div>
-        <strong>Greg Barnett &copy; 2021</strong>
+        <strong>Greg Barnett &copy; 2023</strong>
       </div>
     </footer>
 
